--- a/arado.qrc
+++ b/arado.qrc
@@ -31,6 +31,10 @@
         <file>images/player_fwd.png</file>
         <file>images/player_rev.png</file>
     </qresource>
+    <qresource prefix="/help">
+        <file alias="LICENSE.txt">helpfiles/LICENSE.txt</file>
+        <file alias="helpman.html">helpfiles/helpman.html</file>
+    </qresource>
     <qresource prefix="/translate">
         <file alias="arado_de.qm">translate/arado_de.qm</file>
     </qresource>
