terms. just terms.: Make Constant, Make Flexible. function suggestion:
- any marked IP is sent to Constant (A) Table,  if the button Make Constant is pressed.
- any marked IP is sent to Flexible (C) Table, if the button Make Flexible is pressed.

--- a/ui/connection-display.ui
+++ b/ui/connection-display.ui
@@ -604,7 +604,7 @@
         <string>Adds an IP from recommended or episodic list to trusted list.</string>
        </property>
        <property name="text">
-        <string>Promote</string>
+        <string>Make Constant</string>
        </property>
        <property name="icon">
         <iconset resource="../arado.qrc">
@@ -671,7 +671,7 @@
         <bool>false</bool>
        </property>
        <property name="text">
-        <string>Demote</string>
+        <string>Make Flexible</string>
        </property>
        <property name="icon">
         <iconset resource="../arado.qrc">
