--- a/ui/address-input.ui
+++ b/ui/address-input.ui
@@ -6,38 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>414</width>
-    <height>255</height>
+    <width>450</width>
+    <height>245</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Add Device-IP to start a connection</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
-    <widget class="QLabel" name="label_3">
-     <property name="toolTip">
-      <string>Insert IP-Adress and Port of your device you want to connect to. Be sure the port of the remote device is forwarded in the remote Nat/Router.</string>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="pixmap">
-      <pixmap resource="../arado.qrc">:/images/server.png</pixmap>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="1">
-    <widget class="QRadioButton" name="ipv4Button">
-     <property name="text">
-      <string>IPv4</string>
-     </property>
-     <attribute name="buttonGroup">
-      <string>typeGroup</string>
-     </attribute>
-    </widget>
-   </item>
-   <item row="0" column="2">
+   <item row="1" column="3">
     <widget class="QRadioButton" name="dnsButton">
      <property name="text">
       <string>DNS</string>
@@ -47,17 +24,7 @@
      </attribute>
     </widget>
    </item>
-   <item row="1" column="1">
-    <widget class="QRadioButton" name="ipv6Button">
-     <property name="text">
-      <string>IPv6</string>
-     </property>
-     <attribute name="buttonGroup">
-      <string>typeGroup</string>
-     </attribute>
-    </widget>
-   </item>
-   <item row="1" column="2">
+   <item row="2" column="3">
     <widget class="QRadioButton" name="i2pButton">
      <property name="text">
       <string>I2P</string>
@@ -67,89 +34,34 @@
      </attribute>
     </widget>
    </item>
-   <item row="2" column="0">
+   <item row="4" column="1">
     <widget class="QLabel" name="label">
      <property name="text">
-      <string>IAddress/Name/ID:</string>
+      <string>IP-Address/Name/ID:</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="1" colspan="2">
+   <item row="4" column="2" colspan="2">
     <widget class="QLineEdit" name="addressEdit"/>
    </item>
-   <item row="3" column="0">
+   <item row="5" column="1">
     <widget class="QLabel" name="label_2">
      <property name="text">
       <string>Port:</string>
      </property>
     </widget>
    </item>
-   <item row="6" column="0">
-    <widget class="QRadioButton" name="constantButton">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="text">
-      <string>Constant</string>
-     </property>
-     <attribute name="buttonGroup">
-      <string>levelGroup</string>
-     </attribute>
-    </widget>
-   </item>
-   <item row="6" column="1">
-    <widget class="QRadioButton" name="remoteButton">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="text">
-      <string>Remote</string>
-     </property>
-     <attribute name="buttonGroup">
-      <string>levelGroup</string>
-     </attribute>
-    </widget>
-   </item>
-   <item row="8" column="0">
+   <item row="19" column="1">
     <widget class="QLabel" name="label_4">
      <property name="text">
       <string>Nick:</string>
      </property>
     </widget>
    </item>
-   <item row="8" column="1" colspan="2">
+   <item row="19" column="2" colspan="2">
     <widget class="QLineEdit" name="nickEdit"/>
    </item>
-   <item row="9" column="0">
-    <widget class="QPushButton" name="okButton">
-     <property name="minimumSize">
-      <size>
-       <width>0</width>
-       <height>43</height>
-      </size>
-     </property>
-     <property name="text">
-      <string>OK</string>
-     </property>
-     <property name="icon">
-      <iconset resource="../arado.qrc">
-       <normaloff>:/images/button_ok.png</normaloff>:/images/button_ok.png</iconset>
-     </property>
-     <property name="iconSize">
-      <size>
-       <width>32</width>
-       <height>32</height>
-      </size>
-     </property>
-    </widget>
-   </item>
-   <item row="9" column="2">
+   <item row="21" column="3">
     <widget class="QPushButton" name="cancelButton">
      <property name="minimumSize">
       <size>
@@ -172,7 +84,26 @@
      </property>
     </widget>
    </item>
-   <item row="6" column="2">
+   <item row="5" column="2">
+    <widget class="QLineEdit" name="portEdit"/>
+   </item>
+   <item row="7" column="2">
+    <widget class="QRadioButton" name="constantButton">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text">
+      <string>Add to Constant</string>
+     </property>
+     <attribute name="buttonGroup">
+      <string>levelGroup</string>
+     </attribute>
+    </widget>
+   </item>
+   <item row="7" column="3">
     <widget class="QRadioButton" name="flexibleButton">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -181,15 +112,165 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>Flexible</string>
+      <string>Add to Flexible</string>
      </property>
      <attribute name="buttonGroup">
       <string>levelGroup</string>
      </attribute>
     </widget>
    </item>
-   <item row="3" column="1">
-    <widget class="QLineEdit" name="portEdit"/>
+   <item row="5" column="3">
+    <widget class="QRadioButton" name="remoteButton">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text">
+      <string>Remote</string>
+     </property>
+     <attribute name="buttonGroup">
+      <string>levelGroup</string>
+     </attribute>
+    </widget>
+   </item>
+   <item row="21" column="2">
+    <widget class="QPushButton" name="okButton">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>43</height>
+      </size>
+     </property>
+     <property name="text">
+      <string>OK</string>
+     </property>
+     <property name="icon">
+      <iconset resource="../arado.qrc">
+       <normaloff>:/images/button_ok.png</normaloff>:/images/button_ok.png</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>32</width>
+       <height>32</height>
+      </size>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="2">
+    <widget class="QRadioButton" name="ipv4Button">
+     <property name="text">
+      <string>IPv4</string>
+     </property>
+     <attribute name="buttonGroup">
+      <string>typeGroup</string>
+     </attribute>
+    </widget>
+   </item>
+   <item row="1" column="2">
+    <widget class="QRadioButton" name="ipv6Button">
+     <property name="text">
+      <string>IPv6</string>
+     </property>
+     <attribute name="buttonGroup">
+      <string>typeGroup</string>
+     </attribute>
+    </widget>
+   </item>
+   <item row="20" column="2">
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="0" column="2">
+    <spacer name="verticalSpacer_2">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="2" column="0">
+    <widget class="QLabel" name="label_3">
+     <property name="toolTip">
+      <string>Insert IP-Adress and Port of your device you want to connect to. Be sure the port of the remote device is forwarded in the remote Nat/Router.</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="pixmap">
+      <pixmap resource="../arado.qrc">:/images/server.png</pixmap>
+     </property>
+    </widget>
+   </item>
+   <item row="22" column="2">
+    <spacer name="verticalSpacer_3">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="8" column="2">
+    <spacer name="verticalSpacer_4">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="6" column="2">
+    <spacer name="verticalSpacer_5">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="3" column="2">
+    <spacer name="verticalSpacer_6">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
