--- a/ui/connection-display.ui
+++ b/ui/connection-display.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>927</width>
+    <width>941</width>
     <height>480</height>
    </rect>
   </property>
@@ -587,7 +587,7 @@
    <item row="3" column="1">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QPushButton" name="buttonMakeConstant">
+      <widget class="QPushButton" name="buttonMoveLeft">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
          <horstretch>0</horstretch>
@@ -651,7 +651,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="buttonMakeFlexible">
+      <widget class="QPushButton" name="buttonMoveRight">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
          <horstretch>0</horstretch>
