--- a/ui/address-input.ui
+++ b/ui/address-input.ui
@@ -49,7 +49,11 @@
     </widget>
    </item>
    <item row="19" column="2" colspan="2">
-    <widget class="QLineEdit" name="nickEdit"/>
+    <widget class="QLineEdit" name="nickEdit">
+     <property name="toolTip">
+      <string>Enter any unique Nick. Duplicates will be overwritten.</string>
+     </property>
+    </widget>
    </item>
    <item row="21" column="3">
     <widget class="QPushButton" name="cancelButton">
@@ -77,7 +81,7 @@
    <item row="5" column="2">
     <widget class="QLineEdit" name="portEdit">
      <property name="placeholderText">
-      <string>29998</string>
+      <string notr="true"/>
      </property>
     </widget>
    </item>
