--- a/ui/aradomain.ui
+++ b/ui/aradomain.ui
@@ -39,7 +39,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>21</height>
+     <height>25</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -79,8 +79,8 @@
     </property>
     <addaction name="actionAddServer"/>
     <addaction name="separator"/>
-    <addaction name="actionImport_IP_List"/>
-    <addaction name="actionExport_IP_List"/>
+    <addaction name="actionImportIP"/>
+    <addaction name="actionExportIP"/>
     <addaction name="separator"/>
     <addaction name="actionPoll"/>
    </widget>
@@ -153,7 +153,7 @@
     <string>Edit RSS-Import-URL</string>
    </property>
   </action>
-  <action name="actionImport_IP_List">
+  <action name="actionImportIP">
    <property name="icon">
     <iconset resource="../arado.qrc">
      <normaloff>:/images/down.png</normaloff>:/images/down.png</iconset>
@@ -162,7 +162,7 @@
     <string>Import IP-List</string>
    </property>
   </action>
-  <action name="actionExport_IP_List">
+  <action name="actionExportIP">
    <property name="icon">
     <iconset resource="../arado.qrc">
      <normaloff>:/images/up.png</normaloff>:/images/up.png</iconset>
