--- a/arado.qrc
+++ b/arado.qrc
@@ -31,6 +31,7 @@
         <file>images/player_fwd.png</file>
         <file>images/player_rev.png</file>
         <file>images/roll.png</file>
+        <file>images/no.png</file>
     </qresource>
     <qresource prefix="/help">
         <file alias="LICENSE.txt">helpfiles/LICENSE.txt</file>
