--- a/arado.qrc
+++ b/arado.qrc
@@ -32,8 +32,8 @@
         <file>images/player_rev.png</file>
         <file>images/roll.png</file>
         <file>images/no.png</file>
-        <file>images/arado-claim-transparent.png</file>
-        <file>images/arado-claim-white.png</file>
+        <file alias="claim-trans.png">images/arado-claim-transparent.png</file>
+        <file alias="claim-white.png">images/arado-claim-white.png</file>
     </qresource>
     <qresource prefix="/help">
         <file alias="LICENSE.txt">helpfiles/LICENSE.txt</file>
